# nokia-3310

./: .gitignore  .project  CHANGELOG.md  README.md  nokia3310.cabal
.dbeaver/: .credentials-config.json.bak  .project-metadata.json.bak  credentials-config.json  data-sources.json  project-metadata.json  project-settings.json
DB/: Connection.hs  Init.hs
DB/Models/: Alarm.hs  Call.hs  Chip.hs  Contact.hs  Event.hs  Message.hs
Scripts/: Script.sql
app/: Main.hs
app/modules/alarm/: index.hs  mainAlarm.hs
app/modules/calendar/: index.hs
app/modules/call/: deleteCall.hs  executeCall.hs  index.hs  listCalls.hs
app/modules/contacts/: Index.hs  agenda.hs  contacts.hs
app/modules/message/: index.hs
app/shared/main/helper/: display.hs  timer.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
