cabal-version:      2.4
name:               nokia3310
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             João Victor
maintainer:         jvdso.15@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable nokia3310
    main-is:         app/Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: DB.Connection
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.18.0.0,
                    postgresql-simple ^>=0.6.4,
                    bytestring ^>=0.11.4.0,
                    time ^>=1.12.2,
                    random ^>=1.2.1,
                    async ^>= 2.2.4,
                    monad-loops ^>= 0.4.2.1,
                    ansi-terminal ^>= 0.11.5,
                    split ^>= 0.2.3.4
    hs-source-dirs:   ./
    default-language: Haskell2010